--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>📅 Duty Manager</h1>
+        <h1></h1>🗓️ Duty Manag Pro er</h1>
         <div class="clock-container">
             <div class="clock" id="clock">Loading...</div>
             <button onclick="confirmClearData()">Clear All Data</button>
@@ -213,7 +213,7 @@
 
                     <option value="">Select Shift</option>
                     <option value="morning">Morning (6 AM - 2 PM)</option>
-                    <option value="general">General (10 AM - 6 PM)</option>
+                    <option value="General">General (10 AM - 6 PM)</option>
                     <option value="day">Day (2 PM - 10 PM)</option>
                     <option value="night">Night (10 PM - 6 AM)</option>
             </select>
@@ -476,5 +476,9 @@
             hideModal();
         }
     </script>
+
+<footer style="text-align: center; padding: 10px; background: #333; color: white;">
+    &copy; 2025 Chandan Ruidas. All rights reserved.
+</footer>
 </body>
 </html>
