--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 </head>
 <body>
     <div class="container">
-        <h1></h1>🗓️ Duty Manag Pro er</h1>
+        <h1></h1>🗓️ Duty Management Pro</h1>
         <div class="clock-container">
             <div class="clock" id="clock">Loading...</div>
             <button onclick="confirmClearData()">Clear All Data</button>
